Resolved overflowing input bug

--- a/react-app/src/components/Steps/StepStyles/StepCarousel.css
+++ b/react-app/src/components/Steps/StepStyles/StepCarousel.css
@@ -50,6 +50,7 @@
   border: 2px solid #324a6b;
   width: 100%;
   border-radius: 8px;
+  max-width: 100%;
 }
 
 .sc-content-color-bar {
@@ -78,6 +79,7 @@
   width: 100%;
   max-height: 30%;
   height: auto;
+  max-width: 100%;
 }
 
 .sc-inner-text {
@@ -85,10 +87,15 @@
   color: var(--main-font-color);
   padding-top: 20px;
   padding-bottom: 20px;
+  max-width: 100%;
+  width: 100%;
 }
 
 .sc-inner-text-container#sc-description{
   height: auto;
+  max-width: 100%;
+  width: 100%;
+  word-break: break-all;
 }
 
 .sc-left-arrow,
